Add interactions stats and few other changes